--- a/ieee_spm/adjoints_in_gradients.tex
+++ b/ieee_spm/adjoints_in_gradients.tex
@@ -8,6 +8,11 @@
 
 \usepackage{mathdots} % for \iddots
 
+\usepackage{tikz}
+\usetikzlibrary{matrix}
+\usetikzlibrary{calc}
+\tikzset{node style ge/.style={circle}}
+
 \usepackage{array}
 
 \usepackage{graphicx}
@@ -265,19 +270,61 @@ Figure \ref{fig:cameraman_200_bior4.4_sym} shows the deblurred cameraman image a
 
 % ]]]
 
+%TODO might have to cut this out if the problem doesn't recover things well
 \section{Example 2: Blind Channel Estimation}
 % [[[
 Another application where an interesting adjoint is involved in the gradient computation is in blind channel estimation.  In blind channel estimation, a single source sends an unknown signal over multiple channels with unknown response.  Observers collect the output of each channel and collectively attempt to determine the source signal and the channel impulse response from each channel.  Let $s$ be the unknown source signal and $h_i$ the channel impulse response of the $i$th channel.  Then the output of the $i$th channel is
 
 \[ x_i = h_i\ast s. \] 
 
-\noindent In this form, we must solve a multitude of nonlinear equations in the components of $s$ and each $h_i$.  
+\noindent In this form, we must solve a multitude of nonlinear equations in the components of $s$ and each $h_i$.  Also note that there is both a magnitude and phase ambiguity in $h_i$ and $s$, since we can multiply $h_i$ by $\alpha\neq 0$ and divide $s$ by $\alpha$, leaving $x_i$ unchanged.\\
 
+Recently Ahmed et al. \cite{ahmed_2013} published a paper considering blind deconvolution via convex optimization.  Crucial to their method is the following observation.  The convolution $h_i\ast s$ can be formed as a linear operation on the elements of the rank-1 matrix $h_is^T$:
+
+\[ h_i\ast s = \mathcal{A}(h_is^T). \] 
+
+\noindent This linear operator is a little bit odd in that it maps matrices to vectors, and so its adjoint is not quite obvious.
+
+\begin{figure}
+\begin{tikzpicture}[baseline=(hs.center)]
+   % based on figure from Romberg et al. "Multichannel blind deconvolution..."
+   % and examples from http://www.texample.net/tikz/examples/mnemonic-rule-for-matrix-determinant/
+   % http://tex.stackexchange.com/questions/83046/position-two-stacked-tikz-matrices
+   % http://www.texample.net/tikz/examples/energy-level-diagram/
+   \matrix (hs) [matrix of math nodes, nodes = {node style ge},, column sep=0mm, row sep=-8mm]
+   {h_i[0]s[0] & h_i[0]s[1] & h_i[0]s[2] & h_i[0]s[3] \\
+    h_i[1]s[0] & h_i[1]s[1] & h_i[1]s[2] & h_i[1]s[3] \\
+    h_i[2]s[0] & h_i[2]s[1] & h_i[2]s[2] & h_i[2]s[3] \\
+    h_i[3]s[0] & h_i[3]s[1] & h_i[3]s[2] & h_i[3]s[3] \\
+    h_i[4]s[0] & h_i[4]s[1] & h_i[4]s[2] & h_i[4]s[3] \\
+    h_i[5]s[0] & h_i[5]s[1] & h_i[5]s[2] & h_i[5]s[3] \\
+    h_i[6]s[0] & h_i[6]s[1] & h_i[6]s[2] & h_i[6]s[3] \\
+    h_i[7]s[0] & h_i[7]s[1] & h_i[7]s[2] & h_i[7]s[3] \\
+   };
+
+   \begin{scope}[xshift=-35mm,yshift=-16mm]
+   \matrix (y) [matrix of math nodes, nodes = {node style ge},, column sep=0mm, row sep=-2mm]
+   {y[0]\\
+    y[1]\\
+    y[2]\\
+    y[3]\\
+    \vdots\\
+   };
+   \end{scope}
+
+   \draw [thick,->,>=stealth,shorten >=-9mm,shorten <=-4mm,color=blue] (hs-1-4.center) to (hs-4-1.center);
+   \draw [thick,->,>=stealth,shorten >=-9mm,shorten <=-4mm,color=blue] (hs-2-4.center) to (hs-5-1.center);
+   \draw [thick,->,>=stealth,shorten >=-9mm,shorten <=-4mm,color=blue] (hs-3-4.center) to (hs-6-1.center);
+   \draw [thick,->,>=stealth,shorten >=-9mm,shorten <=-4mm,color=blue] (hs-4-4.center) to (hs-7-1.center);
+\end{tikzpicture}
+\caption{How $x_i$ is formed via $\mathcal{A}(h_is^T)$.  Adapted from \cite{romberg_2013}.}%TODO
+\end{figure}
 
 
 % ]]]
 
 % References
+%TODO make a separate .bib
 % copied from ../notes/adjoint_wavelet_notes.bbl
 % [[[
 \input{../notes/adjoint_wavelet_notes.bbl}
